add search page, account page, list page and templates

--- a/client/templates/layout/_footer.html
+++ b/client/templates/layout/_footer.html
@@ -2,14 +2,14 @@
    <footer class="footernav">
         <ul class="list-inline">
             <li>
-                <a href="{{ pathFor 'view1' }}">
-                    {{{i18n 'dapp.app.buttons.view1'}}}
+                <a href="{{ pathFor 'search' }}">
+                    {{{i18n 'dapp.app.buttons.search'}}}
                 </a>
             </li>
             <li class="footer-menu-divider">⋅</li>
             <li>
-                <a href="{{ pathFor 'view2' }}">
-                    {{{i18n 'dapp.app.buttons.view2'}}}
+                <a href="{{ pathFor 'account' }}">
+                    {{{i18n 'dapp.app.buttons.account'}}}
                 </a>
             </li>
         </ul>
