--- a/client/templates/layout/_footer.html
+++ b/client/templates/layout/_footer.html
@@ -12,6 +12,12 @@
                     {{{i18n 'dapp.app.buttons.account'}}}
                 </a>
             </li>
+            <li class="footer-menu-divider">⋅</li>
+            <li>
+                <a href="{{ pathFor 'faq' }}">
+                    {{{i18n 'dapp.app.buttons.faq'}}}
+                </a>
+            </li>
         </ul>
        
         <p class="copyright text-muted small">
