--- a/client/templates/components/searchBox.html
+++ b/client/templates/components/searchBox.html
@@ -1,7 +1,7 @@
 <template name="components_searchBox">
     <div class="panel panel-default panel-dapp">
         <div class="panel-body">
-            @<input placeholder={{i18n 'dapp.components.searchBox.placeholder'}} >
+            @<input class="twitter-search" placeholder={{i18n 'dapp.components.searchBox.placeholder'}} >
         </div>
     </div>
 </template>
