remove twitter auth and upgrade solc

--- a/client/templates/views/login.html
+++ b/client/templates/views/login.html
@@ -1,6 +1,6 @@
 <template name="login">
 
     <img src="images/naze-green-transparent.png" width="400px"/>
-    {{> atForm}}
+    <p>Please download Metamask and choose an account to get access to the service</p>
 
 </template>
