upgrade meteor and get it running and push to server

--- a/client/templates/views/search.html
+++ b/client/templates/views/search.html
@@ -24,8 +24,8 @@
                     <div class="card-image">
                         <img src={{peep.imageBig}}>
                         <span class="card-title">{{peep.screen_name}}</span>
-                        <a class="btn-floating halfway-fab waves-effect waves-light red">&nbsp;&nbsp;sell</a>
-                        <a style="right: 88px;" class="btn-floating halfway-fab waves-effect waves-light green">&nbsp;&nbsp;buy</a>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▼</a>
+                        <a style="right: 88px;" class="btn-floating halfway-fab waves-effect waves-light green">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▲</a>
 
                     </div>
                     <div class="card-content">
