--- a/client/templates/components/transaction.html
+++ b/client/templates/components/transaction.html
@@ -9,7 +9,7 @@
             {{> components_buyContract}}
         </div>
         <div class="col-md-6">
-            {{> components_sellContract}}
+            {{> components_multiplyContract}}
         </div>
     </div>
 </template>
