--- a/client/templates/layout/main.html
+++ b/client/templates/layout/main.html
@@ -1,4 +1,8 @@
 <template name="layout_main">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N74V73F"
+              height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- The dynamic page header -->
     {{> yield region="header"}}
 
