--- a/client/templates/components/searchBox/searchBox.html
+++ b/client/templates/components/searchBox/searchBox.html
@@ -1,6 +1,7 @@
 <template name="components_searchBox">
     <div class="panel panel-default panel-dapp">
-        <div class="panel-body">
+        <div class="panel-body input-field">
+            <i class="material-icons prefix">search</i>
             <input class="twitter-search" id="searchBox" placeholder={{i18n 'dapp.components.searchBox.placeholder'}}>
         </div>
     </div>
