--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -25,6 +25,10 @@
 	<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
     <!--<meta name="theme-color" content="#ffffff">-->
 
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 
     <meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
