--- a/client/templates/layout/_header.html
+++ b/client/templates/layout/_header.html
@@ -7,6 +7,14 @@
                 </a>
 			</div>
 
+            <ul class="nav navbar-nav navbar-left">
+                <li>
+                    <a class="what-is-this" href="/guide">
+                        {{{i18n 'dapp.app.what'}}}
+                    </a>
+                </li>
+            </ul>
+
             <ul class="nav navbar-nav navbar-middle">
                 <li>
                     <a href="{{ pathFor route='list.show' data=getTrending }}">
