--- a/client/templates/components/peep/peepSmall.html
+++ b/client/templates/components/peep/peepSmall.html
@@ -6,7 +6,7 @@
                 <div class="col s12 card small" style="padding: 0;">
                     <div class="card-image">
                         <img src={{peep.imageBig}}>
-                            <span class="card-title"><a href="/search/{{friend.screen_name}}">{{friend.screen_name}}</a></span>
+                            <span class="card-title"><a href="/search/{{peep.screen_name}}">{{peep.screen_name}}</a></span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▼</a>
                             <a style="right: 88px;" class="btn-floating halfway-fab waves-effect waves-light green">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▲</a>
 
