--- a/client/templates/views/guide.html
+++ b/client/templates/views/guide.html
@@ -3,15 +3,17 @@
     <div class="ui vertical masthead center aligned segment">
         <div class="ui middle aligned stackable grid container">
             <div class="row">
-                <div class="twelve wide centered column">
+                <div class="col s12">
                     <h1 class="ui header" style="font-size:4em">
                         How does People Coin work?
                     </h1>
                 </div>
             </div>
             <div class="row" style="padding-bottom:40px">
+                <div class="col s12">
                 <iframe src="https://docs.google.com/presentation/d/1fGxu_GDQPQzRp_hOm7HRHkhTzI5iu1XnkIYGgwTRzwI/embed?start=true&loop=false&delayms=5000"
-                        frameborder="0" width="791" height="452" allowfullscreen style="display:block;margin:0 auto"></iframe>
+                        frameborder="0" width="100%" allowfullscreen style="display:block;margin:0 auto" class="iframe-full-height"></iframe>
+                </div>
             </div>
         </div>
     </div>
