--- a/client/templates/views/search.html
+++ b/client/templates/views/search.html
@@ -1,8 +1,12 @@
 <template name="views_search">
     {{#unless peep}}
         <div class="row">
-            <h1 class="peepcoin_h1">PeopleCoin</h1>
-            <h2 class="peepcoin_h2">Bet on the people you know today, that will be great tomorrow.</h2>
+            <div class="col s2"></div>
+            <div class="col s8 centered">
+                <h1 class="peepcoin_h1">PeopleCoin</h1>
+                <h2 class="peepcoin_h2">Bet on the people you know today, that will be great tomorrow.</h2>
+            </div>
+            <div class="col s2"></div>
         </div>
     {{/unless}}
     <div class="row">
