--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -26,6 +26,11 @@
      text-decoration: none !important;
 }
 
+.nav-wrapper .card.small a:hover, a:focus {
+    color: initial;
+    text-decoration: none !important;
+}
+
 .web3_address{
     pointer-events:none;
 }
@@ -45,4 +50,37 @@
     color:black;
     font-size: 30px;
     font-weight: 500;
+}
+
+#mobile-demo li > a{
+    color: #4a90e2;
+    font-weight: normal;
+}
+
+.peep-image{
+    width: 100%;
+    margin: auto;
+    background: transparent center center no-repeat;
+    background-size: cover;
+    height: 230px;
+    position: relative;
+    border: solid white 3px;
+}
+
+.peep-image a{
+    color: white;
+}
+
+.bet-arrow{
+    text-align: center;
+}
+
+.peep-image:before {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
+    content: '';
 }
