add mobile fixes and style fixes. contact is left to be integrated

--- a/client/templates/components/multiplyContract.html
+++ b/client/templates/components/multiplyContract.html
@@ -23,7 +23,7 @@
             
                 {{#if isMined}}
                     <div class="alert alert-success">
-                        Your MultiplyContract has been mined!
+                        Your SellContract has been mined!
                     </div>
             
                     <hr />
@@ -42,7 +42,7 @@
                     <hr />
             
                     <label>
-                        Type a value here to multply:
+                        Type a value here to sell:
                     </label>
             
                     <input type="text"
@@ -53,7 +53,7 @@
                     <br />
                     
                     <p>
-                        Multiply Result: 
+                        Sell Result:
                         <span>{{TemplateVar.get 'multiplyResult'}}</span>
                     </p>
                 {{/if}}
