--- a/client/templates/views/faq.html
+++ b/client/templates/views/faq.html
@@ -1,63 +1,61 @@
 <template name="views_faq">
     <div class="row-fluid">
         <h1>PeopleCoin FAQ</h1>
-        <h2>Premise Dashboard Content</h2>
-        <h2 class="flow-text">Question 1</h2>
         <p class="flow-text">Have you ever just knew that someone was going to be an amazing rapper, world class athlete, or genius that makes millions before anyone else? Before the world caught attention?</p>
         <p class="flow-text">PeopleCoin allows you to bet early on that person. As others are catching on, you are cashing in.</p>
-’
+
         <h2>General</h2>
-        <blockquote>What is PeopleCoin?</blockquote>
-        <p class="flow-text">PeopleCoin is a social betting platform that allows the users to profit when they correctly bet on a person’s success; They purchase coins in someone and when others purchase coins after them, the value of the coin goes up. PeopleCoin seeks to reward the day-one individuals who know for certain that someone they know will ascend and trust following users will follow and bet on them over time.</p>
+        <h2 class="flow-text" style="color:#4a90e2">What is PeopleCoin?</h2>
+        <p class="flow-text">PeopleCoin is a social betting platform that allows the users to profit when they correctly bet on a person's success; They purchase coins in someone and when others purchase coins after them, the value of the coin goes up. PeopleCoin seeks to reward the day-one individuals who know for certain that someone they know will ascend and trust following users will follow and bet on them over time.</p>
 
-        <blockquote>How does PeopleCoin work?</blockquote>
-        <p class="flow-text">PeopleCoin allows the success of an individual to reward those who bet on them. PeopleCoin is algorithmically 'minted' daily at a fixed rate and purchased by users in order to bet. Users can sell the tokens when they believe an individual has peaked. This process is made possible due to the PeopleCoin blockchain and decentralization; Each purchase and sale of tokens is recorded on a public leger. Users don’t have to be registered for you to bet on them, you search for individuals by searching for their Twitter profile on the PeopleCoin platform. Similar to how Twitter currates its news, on PeopleCoin, users are made aware of trending individuals and top individuals being bet on via the platform.</p>
+        <h2 class="flow-text" style="color:#4a90e2">How does PeopleCoin work?</h2>
+        <p class="flow-text">PeopleCoin allows the success of an individual to reward those who bet on them. PeopleCoin is algorithmically 'minted' daily at a fixed rate and purchased by users in order to bet. Users can sell the tokens when they believe an individual has peaked. This process is made possible due to the PeopleCoin blockchain and decentralization; Each purchase and sale of tokens is recorded on a public leger. Users don't have to be registered for you to bet on them, you search for individuals by searching for their Twitter profile on the PeopleCoin platform. Similar to how Twitter currates its news, on PeopleCoin, users are made aware of trending individuals and top individuals being bet on via the platform.</p>
 
-        <blockquote>Do those being bet on get paid? How much?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">Do those being bet on get paid? How much?</h2>
         <p class="flow-text">No. This is not a crowdfunding or fundraising platform and no coins are awarded to those being bet on. Only to those doing the betting.</p>
 
-        <blockquote>Can I earn digital tokens on PeopleCoin? How?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">Can I earn digital tokens on PeopleCoin? How?</h2>
         <p class="flow-text"><strong>Purchasing</strong> - Users can purchase PeopleCoin tokens directly through the PeopleCoin wallet using Ether tokens.</p>
         <p class="flow-text"><strong>Betting</strong> - By betting correctly. The amount of tokens an individual possesses compounds when additional users bet and decreases when additional users sell.</p>
 
-        <blockquote>Where do the tokens come from?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">Where do the tokens come from?</h2>
         <p class="flow-text">PeopleCoin is algorithmically 'minted' daily at a fixed rate as shown in the PeopleCoin open source program. Tokens are awarded to users that make correct bets.</p>
 
-        <blockquote>Where does the value come from?</blockquote>
-        <p class="flow-text">At its core, PeopleCoin’s betting works like a points system. However, because this points system is blockchain-based, the points can be traded on markets as tokens. People buy and sell these tokens not only to bet on people with upside but to additionally be able to hold tokens that appreciate in value as the word moves towards embracing decentralization. Many hold not just based on faith in an individual, but also in anticipation of increased value in the tokens themselves that will have applications beyond just betting.</p>
+        <h2 class="flow-text" style="color:#4a90e2">Where does the value come from?</h2>
+        <p class="flow-text">At its core, PeopleCoin's betting works like a points system. However, because this points system is blockchain-based, the points can be traded on markets as tokens. People buy and sell these tokens not only to bet on people with upside but to additionally be able to hold tokens that appreciate in value as the word moves towards embracing decentralization. Many hold not just based on faith in an individual, but also in anticipation of increased value in the tokens themselves that will have applications beyond just betting.</p>
         <p class="flow-text">By analogy, PeopleCoin is a betting system where users bet on those they believe in and are rewarded when others believe in them. This activity adds value to the platform also. The rewards people earn are tokens that have market value and are readily tradable. It is similar to how someone playing a video game could obtain a limited item or currency by playing the game.</p>
 
-        <blockquote>Why not use metrics like social media followers, net worth, and quantitative measures of success that can provide data to make decisions on?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">Why not use metrics like social media followers, net worth, and quantitative measures of success that can provide data to make decisions on?</h2>
         <p class="flow-text">PeopleCoin does not limit the definition of success to traditional metrics because they are not always indicative of success. The philosophy of PeopleCoin is that success is a function of social rank. Social rank is something that people develop when they meet someone in person or are moved by something they have done.</p>
-        <p class="flow-text">You can’t quantify how much a successful person has influenced or motivated you based on metrics like following count, news articles, grade reports. Quite often, those with many followers or articles don’t necessarily have the most impact on other people.</p>
+        <p class="flow-text">You can't quantify how much a successful person has influenced or motivated you based on metrics like following count, news articles, grade reports. Quite often, those with many followers or articles don't necessarily have the most impact on other people.</p>
 
-        <blockquote>Then how do you quantify success? What really makes someone successful to other people?</blockquote>
-        <p class="flow-text">PeopleCoin doesn’t quantify success with provision of information,because the top quality information will be from sources that are hard to access.</p>
+        <h2 class="flow-text" style="color:#4a90e2">Then how do you quantify success? What really makes someone successful to other people?</h2>
+        <p class="flow-text">PeopleCoin doesn't quantify success with provision of information,because the top quality information will be from sources that are hard to access.</p>
         <p class="flow-text">A person's true feelings or excitement about someone that they meet or hear about should be rewarded when they understand that someone will begin to rise. Having that relationship and believing early is a unique perspective that should be rewarded as others begin to believe as well.</p>
 
-        <blockquote>How does this work on those that are already famous?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">How does this work on those that are already famous?</h2>
         <p class="flow-text">PeopleCoin is most interesting when someone can rise from a place of less exposure to positive and wide influence. But it's fully conceivable for someone already with influence within a single industry transcending that industry to inspire and move more people.</p>
 
-        <blockquote>What will determine the day-to-day trend in the coin's value? </blockquote>
-        <p class="flow-text">The day to day trend of PeopleCoin depends completely on users buying or selling the coin. But if there are no transactions or small amounts buying and selling, the coin’s day-to-day trend won’t move very much. But with large amounts of either purchases and sells, the coin value will change more significantly.</p>
+        <h2 class="flow-text" style="color:#4a90e2">What will determine the day-to-day trend in the coin's value? </h2>
+        <p class="flow-text">The day to day trend of PeopleCoin depends completely on users buying or selling the coin. But if there are no transactions or small amounts buying and selling, the coin's day-to-day trend won't move very much. But with large amounts of either purchases and sells, the coin value will change more significantly.</p>
 
 
         <h2>Accounts</h2>
-        <blockquote>How do I create an account?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">How do I create an account?</h2>
         <p class="flow-text">Sign up for MetaMask. If you download the chrome extension and link your wallet, you will automatically have an account on PeopleCoin.</p>
 
-        <blockquote>What information do I need to provide in order to start betting on a Peep?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">What information do I need to provide in order to start betting on a Peep?</h2>
         <p class="flow-text">To create a Peep on the blockchain, it costs PeopleCoin tokens. When you create an account through PeopleCoin, tokens are supplied tokens to pay the account creation fee. In order to prevent users from abusing the paid-for signup and betting on fraudulent Peeps, we need to be able to verify each account through the system. The process takes no more than 1 business day.</p>
 
-        <blockquote>Can I delete or deactivate my account?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">Can I delete or deactivate my account?</h2>
         <p class="flow-text">Accounts can not be deactivated or deleted. The account along with all of its activity is permanently stored in the blockchain.</p>
 
 
         <h2>Economics</h2>
-        <blockquote>Where do the new PeopleCoin tokens come from?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">Where do the new PeopleCoin tokens come from?</h2>
         <p class="flow-text">Blockchains like PeopleCoin and Bitcoin may produce new tokens each time a block is produced. Unlike Bitcoin, where all of the new coins go to the block producers (called miners), the PeopleCoin blockchain allocates a majority of the new tokens to a reward pool. This reward pool is allocated to users that make successful bets on the platform.</p>
 
-        <blockquote>Do you have more details on how this works?</blockquote>
+        <h2 class="flow-text" style="color:#4a90e2">Do you have more details on how this works?</h2>
         <ul class="flow-text">
             <li>The cost to start an Event is fixed at 1 PeepCoin which gets transferred as ETH and then held as PPC under the players name</li>
             <li>Any additional ETH transferred is converted into PPC as well, and that becomes the amount that the first player holds and is able to sell<br />
