--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -67,8 +67,8 @@
     border: solid white 3px;
 }
 
-.peep-image a{
-    color: white;
+.card-image a{
+    color: white !important;
 }
 
 .bet-arrow{
@@ -83,4 +83,8 @@
     left: 0;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
     content: '';
+}
+
+.list-inline{
+    padding-left: 10px !important;
 }
