get buy contract interacting properly

--- a/client/templates/components/peep/peep.html
+++ b/client/templates/components/peep/peep.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col offset-m1 m4 offset-s2 s8">{{> components_transaction}}</div>
+            <div class="col offset-m1 m4 offset-s2 s8">{{> components_transaction peep=peep}}</div>
 
         </div>
     {{/if}}
