--- a/client/templates/components/transaction.html
+++ b/client/templates/components/transaction.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            {{> components_buyContract}}
+            {{> components_buyContract peep=peep}}
         </div>
         <div class="col-md-6">
             {{> components_multiplyContract}}
