--- a/app/client/templates/layout/_footer.html
+++ b/app/client/templates/layout/_footer.html
@@ -18,6 +18,12 @@
                     {{{i18n 'dapp.app.buttons.faq'}}}
                 </a>
             </li>
+            <li class="footer-menu-divider">⋅</li>
+            <li>
+                <a href="https://github.com/sudotong/people-coin">
+                    {{{i18n 'dapp.app.buttons.github'}}}
+                </a>
+            </li>
         </ul>
        
         <p class="copyright text-muted small">
