--- a/app/client/templates/views/search.html
+++ b/app/client/templates/views/search.html
@@ -16,11 +16,22 @@
         {{> components_peep peep=peep}}
     {{else}}
         <div class="row">
+            {{> components_explanation}}
+        </div>
+        <div class="row">
+            <div class="col s12 m8 offset-m2 centered">
+                <h1 class="peepcoin_h1">Search for a promising buddy</h1>
+            </div>
+            <div class="col m8 offset-m2 s10 offset-s1">
+                {{> components_searchBox}}
+            </div>
+        </div>
+        <div class="row">
             {{#if peeps}}
                 {{#each pp in peeps}}
                     <div class="hide-on-small-only">
                     {{#if equalToFirst @index}}
-                        <div class="col m3 offset-m1">
+                        <div class="col m3" style="margin-left:12.33333%;">
                             {{> components_peepSmall peep=pp}}
                         </div>
                     {{else}}
@@ -46,6 +57,6 @@
                     Or your most promising friend
                 </div>
             {{/if}}
-        </div>
+        </div>        
     {{/if}}
 </template>
