add footer linking to github and discord

--- a/app/client/templates/layout/_footer.html
+++ b/app/client/templates/layout/_footer.html
@@ -24,6 +24,11 @@
                     {{{i18n 'dapp.app.buttons.github'}}}
                 </a>
             </li>
+            <li>
+                <a href="https://discord.gg/NAdh82e">
+                    {{{i18n 'dapp.app.buttons.discord'}}}
+                </a>
+            </li>
         </ul>
        
         <p class="copyright text-muted small">
